# Votintseva_LR5_2

./: .replit  main.py  pyproject.toml  replit.nix
static/: script.js
templates/: index.html
